objects/IAM_Application_Groups__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IAM_Application_Access_Record_Id__c</fullName>
        <label>Application Access Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Application_Name__c</fullName>
        <label>Application Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_DN_value__c</fullName>
        <label>DN value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Free_application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Group_Type__c</fullName>
        <label>IAM Group Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Permission_Sets_To_Be_Assigned__c</fullName>
        <label>Permission Sets To Be Assigned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Profile_Name_To_Be_Assigned__c</fullName>
        <label>Profile Name To Be Assigned</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Role_Name__c</fullName>
        <label>Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_User_Access_Record_Id__c</fullName>
        <label>User Access Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>User type needs to be used for PrevenTech application in Connected Solution</description>
        <label>User Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Application Groups</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IAM_Application_Name__c</columns>
        <columns>IAM_Role_Name__c</columns>
        <columns>IAM_DN_value__c</columns>
        <columns>IAM_Free_application__c</columns>
        <columns>IAM_Group_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Quick_Serve_Online</fullName>
        <columns>NAME</columns>
        <columns>IAM_Application_Name__c</columns>
        <columns>IAM_Role_Name__c</columns>
        <columns>IAM_DN_value__c</columns>
        <columns>IAM_Free_application__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Application_Name__c</field>
            <operation>equals</operation>
            <value>QuickServe Online</value>
        </filters>
        <label>Quick Serve Online</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WWSPS</fullName>
        <columns>NAME</columns>
        <columns>IAM_Application_Name__c</columns>
        <columns>IAM_Role_Name__c</columns>
        <columns>IAM_DN_value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IAM_Application_Name__c</field>
            <operation>equals</operation>
            <value>WWSPS</value>
        </filters>
        <label>WWSPS</label>
        <language>en_US</language>
    </listViews>
</CustomObject>